Fix background image on mobile

--- a/app/static/mystyle.css
+++ b/app/static/mystyle.css
@@ -13,13 +13,11 @@
   }
 
 body#bg {
-    width: 100%;
-    margin: 0;
     transition: width 0.5s ease, margin-left .5s;
     -moz-transition: width 0.5s ease, margin-left .5s;
     -webkit-transition: width 0.5s ease, margin-left .5s;
     background-color: black;
-    will-change: transform, width, margin-right;
+    will-change: width, margin-right;
 } 
 
 body#bg:before {
@@ -31,7 +29,6 @@ body#bg:before {
     width: 100%;
     height: 100%;
     z-index: -10;
-    background-color: black;
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/background_optimized.jpg") no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
